repair display button hero section on small screens

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -91,11 +91,10 @@
   .hero {
     grid-template-columns: 100%;
     grid-template-rows: min-content 1fr;
-    align-content: center;
 
     &__content {
       &-btn {
-        align-self: start;
+        transform: translateX(-0.25%);
       }
     }
 
